--- a/css/style.css
+++ b/css/style.css
@@ -467,7 +467,6 @@ h3 {
 	padding-bottom: 16px;
 	
 	min-height: 150px;
-	width: 100%;
 
 	background-color: #2D2E2E;
 	
@@ -490,6 +489,10 @@ h3 {
 
 .EI-left-main {
 	margin-left: 60px;
+}
+
+.expirience-right-column {
+	flex-grow: 1;
 }
 
 .EI-right {
@@ -617,7 +620,6 @@ h3 {
 	display: flex;
 	margin: 0;
 	padding: 0;
-	justify-content: space-between;
 }
 
 .name-bottom {
